--- a/package.json
+++ b/package.json
@@ -6,15 +6,23 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/i18next": "^13.0.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sass": "^1.45.0",
+    "i18next": "^23.0.1",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.63.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
