--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
     "@types/sass": "^1.45.0",
+    "@types/uuid": "^9.0.2",
     "i18next": "^23.0.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
@@ -29,6 +30,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.63.4",
     "typescript": "^4.4.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
