--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -21,11 +25,13 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/sass": "^1.45.0",
     "@types/uuid": "^9.0.2",
+    "formik": "^2.4.2",
     "i18next": "^23.0.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
