--- a/package.json
+++ b/package.json
@@ -20,19 +20,23 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-i18next": "^8.1.0",
+    "@types/react-phone-number-input": "^3.0.14",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "@types/redux-thunk": "^2.1.0",
     "@types/sass": "^1.45.0",
     "@types/uuid": "^9.0.2",
     "formik": "^2.4.2",
+    "google-libphonenumber": "^3.2.33",
     "i18next": "^23.0.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
+    "libphonenumber-js": "^1.10.41",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.0",
+    "react-phone-number-input": "^3.3.2",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
