--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/redux-thunk": "^2.1.0",
     "@types/sass": "^1.45.0",
     "@types/uuid": "^9.0.2",
+    "axios": "^1.5.0",
     "formik": "^2.4.2",
     "google-libphonenumber": "^3.2.33",
     "i18next": "^23.0.1",
