--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "libphonenumber-js": "^1.10.41",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-i18next": "^13.0.0",
